@@ -30,7 +30,7 @@ tablearmcom = {
 	brakerate = 1.125,
 	buildcostenergy = 26700,
 	buildcostmetal = 2670,
-	builddistance = 130,
+	builddistance = 145,
 	builder = true,
 	shownanospray = false,
 	buildpic = "ARMCOM.DDS",
