@@ -28,7 +28,7 @@ tablecorcom = {
 	brakerate = 1.125,
 	buildcostenergy = 26500,
 	buildcostmetal = 2670,
-	builddistance = 130,
+	builddistance = 145,
 	builder = true,
 	shownanospray = false,
 	buildpic = "CORCOM.DDS",
